<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:background="@drawable/gradient_background">
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<!--<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/gradient_background">-->

    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="42dp"
            android:textColor="#ffffff"
            android:shadowColor="@color/textShadow"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/futura_bold_font"
            android:layout_marginBottom="20dp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:backgroundTint="#fff"
                android:textColor="@android:color/white"
                android:layout_marginBottom="20dp"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/username"
                android:backgroundTint="#fff"
                android:textColor="@android:color/white"
                android:layout_marginBottom="20dp"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:backgroundTint="#fff"
            android:textColor="@android:color/white"
            android:hint="@string/email"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:textColor="@android:color/white"
                android:backgroundTint="#fff"
                android:hint="@string/password"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff"
                android:textColor="@android:color/white"
                android:id="@+id/confirmPassword"
                android:hint="@string/confirmPassword"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSignUpRS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_signup"
            android:onClick="btnSignup_click"
            android:padding="18dp"
            android:text="Sign up"
            android:textColor="@color/colorAccent"
            android:textSize="18dp" />
    </LinearLayout>
<!--</RelativeLayout>-->
</ScrollView>
</LinearLayout>